--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#courses">What is Bakso Malang?</a></li>
                     <li><a href="#tutors">Tutors</a></li>
                     <li><a href="#partners">Partners</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -27,8 +27,8 @@
         <section id="home">
             <img src="https://img.freepik.com/free-vector/web-development-programmer-engineering-coding-website-augmented-reality-interface-screens-developer-project-engineer-programming-software-application-design-cartoon-illustration_107791-3863.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
             <div class="kolom">
-                <p class="deskripsi">Belajar Programming #dirumahaja</p>
-                <h2>Tetap Sehat, Tetap Semangat</h2>
+                <p class="deskripsi">Bakso yummyyyy</p>
+                <h2>Wanna some bakso? Just call us.</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
                 <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
             </div>
@@ -39,9 +39,9 @@
             <div class="kolom">
                 <p class="deskripsi">You Will Need This</p>
                 <h2>Online Courses</h2>
-                <p>Menu masakan sehari-hari untuk 1 bulan memang ada baiknya dibuat variasi agar tidak jenuh dan asupan nutrisi terpenuhi setiap harinya. Jika Sobat Yummy bingung dengan ide menu masakan, sini merapat. Yummy App kali ini membagikan rekomendasi menu masakan sehari-hari untuk 1 bulan, beserta link resep yang bisa kamu klik. Simak dan catat, ya!is! Delectus exercitationem dolores sapiente?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed deserunt voluptatibus possimus blanditiis reiciendis. Qui, facilis! Delectus exercitationem dolores sapiente?</p>
-                <p><a href="" class="tbl-biru">Pelajari Lebih Lanjut</a></p>
+                <p>Bakso Malang is a meatball dish that is widely found throughout Malang City and Malang Regency, East Java. Similar to other meatball dishes, the dish consists of meat formed into balls and noodles. The difference is in the addition of fried wonton skin and fried tofu.</p>
+                <p>I Love Bakso So Much!!!</p>
+                <p><a href="" class="tbl-biru">Show me more</a></p>
             </div>
             <img src="https://img.freepik.com/free-vector/online-learning-isometric-concept_1284-17947.jpg?size=626&ext=jpg&ga=GA1.2.1769275626.1605867161"/>
         </section>
