--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://www.canva.com/design/DAGe-3iN-mg/bm8jW9vE3yS5CHos0vdDVA/edit?utm_content=DAGe-3iN-mg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"/>
+            <img src="https://id.images.search.yahoo.com/search/images;_ylt=AwrPrV7N5a1nygIA41nLQwx.;_ylu=Y29sbwNzZzMEcG9zAzEEdnRpZAMEc2VjA3BpdnM-?p=bakso+malang&fr2=piv-web&type=E210ID885G0&fr=mcafee#id=8&iurl=https%3A%2F%2Fsetapaklangkah.com%2Fwp-content%2Fuploads%2F2023%2F04%2FBakso-Malang-Legendaris.webp&action=click"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
