--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
-                <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
+                <p>guaranteed to be addictive!!!</p>
+                <p><a href="" class="tbl-pink">Show me more</a></p>
             </div>
         </section>
 
