--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://cdn.idntimes.com/content-images/community/2022/09/fromandroid-9e12013d15094d85dc5cf215e8bf951e.jpg"/>
+            <img src="![Image](https://github.com/user-attachments/assets/f43c0004-c5de-4cde-8865-48d81100672a)"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
