--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="![Image](https://github.com/user-attachments/assets/f43c0004-c5de-4cde-8865-48d81100672a)"/>
+            <img src="https://github.com/Chandraa55/so-bakso/issues/1"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
