--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#courses">What is Bakso Malang?</a></li>
-                    <li><a href="#tutors">Tutors</a></li>
+                    <li><a href="#tutors">tools and materials</a></li>
                     <li><a href="#partners">Partners</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="" class="tbl-biru">Sign Up</a></li>
@@ -38,7 +38,7 @@
         <section id="courses">
             <div class="kolom">
                 <p class="deskripsi">You Will Need This</p>
-                <h2>Online Courses</h2>
+                <h2>Bakso Malang Definition.</h2>
                 <p>Bakso Malang is a meatball dish that is widely found throughout Malang City and Malang Regency, East Java. Similar to other meatball dishes, the dish consists of meat formed into balls and noodles. The difference is in the addition of fried wonton skin and fried tofu.</p>
                 <p>I Love Bakso So Much!!!</p>
                 <p><a href="" class="tbl-biru">Show me more</a></p>
@@ -50,8 +50,8 @@
         <section id="tutors">
             <div class="tengah">
                 <div class="kolom">
-                    <p class="deskripsi">Our Top Tutors</p>
-                    <h2>Tutors</h2>
+                    <p class="deskripsi">Our favorite food!</p>
+                    <h2>Tools and Materials.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, optio!</p>
                 </div>
 
