--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="kolom">
                 <p class="deskripsi">You Will Need This</p>
                 <h2>Bakso Malang Definition.</h2>
-                <p>Bakso Malang is a meatball dish that is widely found throughout Malang City and Malang Regency, East Java. Similar to other meatball dishes, the dish consists of meat formed into balls and noodles. The difference is in the addition of fried wonton skin and fried tofu.</p>
+                <p>Bakso Malang is a meatball dish that is widely found throughout Malang City and Malang Regency, East Java. Malang meatballs were first introduced by a Chinese-Malaysian immigrant named Tjoen Moesliem in 1939. Tjoen Moesliem opened a meatball stall in the Malang City Square area which later became a famous place to enjoy Malang meatballs. Similar to other meatball dishes, the dish consists of meat formed into balls and noodles. The difference is in the addition of fried wonton skin and fried tofu.</p>
                 <p>I Love Bakso So Much!!!</p>
                 <p><a href="" class="tbl-biru">Show me more</a></p>
             </div>
