--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://tse4.mm.bing.net/th?id=OIP.mE4mzDQW5Spr87H1QkpSNAHaFI&pid=Api&P=0&h=180"/>
+            <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
