--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
                 <div class="kolom">
                     <p class="deskripsi">Our favorite food!</p>
                     <h2>Tools and Materials.</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, optio!</p>
+                    <p>Ingredients for making beef meatballs:
+a. 500 grams of beef
+b. 1 egg
+c. 100 grams of tapioca flour
+d. 3 cloves of garlic, finely ground
+e. 1 tsp pepper powder
+f. 1 tbsp salt
+g. 1/2 tsp beef stock powder
+h. Ice cubes to taste
+i. Hot water
+
+Tools for making beef meatballs:
+a. Chopper
+b. Spatula
+c. Bowl
+d. Spoon
+e. Plastic gloves
+f. Pan</p>
                 </div>
 
                 <div class="tutor-list">
