--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#courses">What is Bakso Malang?</a></li>
                     <li><a href="#tutors">tools and materials</a></li>
-                    <li><a href="#partners">Partners</a></li>
+                    <li><a href="#partners">How To Make Bakso Malang</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="" class="tbl-biru">Sign Up</a></li>
                 </ul>
@@ -104,7 +104,7 @@ f. Pan</p>
 
                 <div class="partner-list">
                     <div class="kartu-partner">
-                        <img src="https://www.designevo.com/res/templates/thumb_small/black-wheat-and-mortarboard.png"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="250px"/>
                     </div>
                     <div class="kartu-partner">
                         <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-63.jpg"/>
