--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true"/>
+            <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true" width="300px"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
@@ -43,7 +43,7 @@
                 <p>I Love Bakso So Much!!!</p>
                 <p><a href="" class="tbl-biru">Show me more</a></p>
             </div>
-            <img src="https://github.com/Chandraa55/so-bakso/blob/main/Stiker%20UPRAK%20PKWU.png?raw=true"/>
+            <img src="https://github.com/Chandraa55/so-bakso/blob/main/Stiker%20UPRAK%20PKWU.png?raw=true" width="300px"/>
         </section>
 
         <!-- untuk tutors -->
@@ -74,7 +74,7 @@ f. Pan</p>
 
                 <div class="tutor-list">
                     <div class="kartu-tutor">
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32.jpeg?raw=true"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32.jpeg?raw=true" width="300px"/>
                         <p>Jason Lee Scott</p>
                     </div>
                     <div class="kartu-tutor">
@@ -104,7 +104,7 @@ f. Pan</p>
 
                 <div class="partner-list">
                     <div class="kartu-partner">
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="250px"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="300px"/>
                     </div>
                     <div class="kartu-partner">
                         <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-63.jpg"/>
