--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ f. Pan</p>
                         <p>Jason Lee Scott</p>
                     </div>
                     <div class="kartu-tutor">
-                        <img src="https://images.ctfassets.net/1wryd5vd9xez/4DxzhQY7WFsbtTkoYntq23/a4a04701649e92a929010a6a860b66bf/https___cdn-images-1.medium.com_max_2000_1_Y6l_FDhxOI1AhjL56dHh8g.jpeg"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2014.06.32.jpeg?raw=true" width="350px"/>
                         <p>John Doe</p>
                     </div>
                     <div class="kartu-tutor">
