--- a/index.html
+++ b/index.html
@@ -75,19 +75,8 @@ f. Pan</p>
                 <div class="tutor-list">
                     <div class="kartu-tutor">
                         <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32.jpeg?raw=true" width="300px"/>
-                        <p>Jason Lee Scott</p>
+                        <p>Our Group.</p>
                     </div>
-                    <div class="kartu-tutor">
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2014.06.32.jpeg?raw=true" width="350px"/>
-                        <p>John Doe</p>
-                    </div>
-                    <div class="kartu-tutor">
-                        <img src="https://images.fastcompany.net/image/upload/w_596,c_limit,q_auto:best,f_auto/fc/3021752-inline-i-1-why-square-designed-its-new-offices-to-work-like-a-city.jpg"/>
-                        <p>Michael Dell</p>
-                    </div>
-                    <div class="kartu-tutor">
-                        <img src="https://blogs-images.forbes.com/jackkelly/files/2019/06/Jack-Kelly_avatar_1559658819-400x400.jpg"/>
-                        <p>Bruce Wills</p>
                     </div>
                 </div>
             </div>
@@ -98,8 +87,15 @@ f. Pan</p>
             <div class="tengah">
                 <div class="kolom">
                     <p class="deskripsi">Our Top Partners</p>
-                    <h2>Partners</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi magni tempore expedita sequi. Similique rerum doloremque impedit saepe atque maxime.</p>
+                    <h2>How To Make Bakso Malang</h2>
+                    <p>How to make beef meatballs:
+1. Put all the ingredients into the chopper
+2. Grind the ingredients in the chopper until smooth
+3. Once smooth, remove the dough from the chopper. Then put the dough into a bowl
+4. Prepare hot water in a pan
+5. Use gloves to form meatballs
+6. Hold the dough and press it until it forms a ball. Then take the formed dough using a spoon
+7. Put the formed meatball dough into a pan filled with hot water.</p>
                 </div>
 
                 <div class="partner-list">
