--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ f. Pan</p>
                 <div class="partner-list">
                     <div class="kartu-partner">
                         <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="300px"/>
+                        
                     </div>
                     <div class="kartu-partner">
                         <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-63.jpg"/>
@@ -124,11 +125,19 @@ f. Pan</p>
         <div class="wrapper">
             <div class="footer">
                 <div class="footer-section">
-                    <h3>RumahRafif.</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, culpa!</p>
+                    <h3>How To Make Soup.</h3>
+                    <p>How to make meatball soup:
+1. Puree fried shallots, fried garlic, and pepper using a mortar
+2. Prepare water in a pan, then cook until boiling
+3. Put the pureed ingredients into the pan
+4. Wait for 10 minutes
+5. Add 1 bunch of celery
+6. Add flavoring and additional spices for the meatball sauce
+7. Then put the meatballs into the pan, wait for 10 minutes until the meatballs float</p>
                 </div>
                 <div class="footer-section">
                     <h3>About</h3>
+                    <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-64.jpg"/>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, culpa!</p>
                 </div>
                 <div class="footer-section">
