--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>About</h3>
-                    <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-64.jpg"/>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true" width="400px"/>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, culpa!</p>
                 </div>
                 <div class="footer-section">
