--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
+            <style="
+                align-items: center;
+                justify-content: center;
+                "
             <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true" width="300px"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
@@ -126,6 +130,7 @@ f. Pan</p>
             <div class="footer">
                 <div class="footer-section">
                     <h3>How To Make Soup.</h3>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true" width="400px"/>
                     <p>How to make meatball soup:
 1. Puree fried shallots, fried garlic, and pepper using a mortar
 2. Prepare water in a pan, then cook until boiling
