--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ f. Pan</p>
 7. Then put the meatballs into the pan, wait for 10 minutes until the meatballs float</p>
                 </div>
                 <div class="footer-section">
-                    <h3>About</h3>
+                    <h3>Method Serve</h3>
                     <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true" width="400px"/>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, culpa!</p>
                 </div>
