--- a/index.html
+++ b/index.html
@@ -102,19 +102,7 @@ f. Pan</p>
                 <div class="partner-list">
                     <div class="kartu-partner">
                         <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="300px"/>
-                        
-                    </div>
-                    <div class="kartu-partner">
-                        <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-63.jpg"/>
-                    </div>
-                    <div class="kartu-partner">
-                        <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-62.jpg"/>
-                    </div>
-                    <div class="kartu-partner">
-                        <img src="https://www.designevo.com/res/templates/thumb_small/encircled-branches-and-book.png"/>
-                    </div>
-                    <div class="kartu-partner">
-                        <img src="https://image.freepik.com/free-vector/campus-collage-university-education-logo-design-template_7492-64.jpg"/>
+                
                     </div>
                 </div>
             </div>
@@ -138,8 +126,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Method Serve</h3>
-                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true" width="400px"/>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, culpa!</p>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true" witdh="400px"/>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
