--- a/index.html
+++ b/index.html
@@ -130,12 +130,11 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Jl. Laksda Adisucipto Sleman Yogyakarta</p>
-                    <p>Kode Pos: 57365</p>
+                    <p>08123456789</p>
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
-                    <p><b>YouTube: </b>Programming di RumahRafif</p>
+                    <p><b>Instagram: </b>Velfrie/p>
                 </div>
             </div>
         </div>
@@ -143,7 +142,7 @@ f. Pan</p>
 
     <div id="copyright">
         <div class="wrapper">
-            &copy; 2020. <b>RumahRafif.</b> All Rights Reserved.
+            &copy; 2025. <b>Naszmit Niga.</b> All Rights Reserved.
         </div>
     </div>
     
