--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Social</h3>
-                    <p><b>Instagram: </b>Velfrie/p>
+                    <p><b>Instagram: </b>Velfdrie>
                 </div>
             </div>
         </div>
