--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
+                    <a href="https://heyzine.com/flip-book/6b98d57988.html" style="font-size: 24px; " >Klik disini </a>
                     <p>08123456789</p>
                 </div>
                 <div class="footer-section">
