--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uprak hybird.</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .centerImage{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
 </head>
 <body>
     <nav>
@@ -25,7 +31,7 @@
     <div class="wrapper">
         <!-- untuk home -->
         <section id="home">
-            <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true" width="300px"/>
+            <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.31.jpeg?raw=true" class="centerImage" width="300px"/>
             <div class="kolom">
                 <p class="deskripsi">Bakso yummyyyy</p>
                 <h2>Wanna some bakso? Just call us.</h2>
@@ -129,8 +135,8 @@ f. Pan</p>
                     <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true" witdh="350px"/>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact</h3>
-                    <a href="https://heyzine.com/flip-book/6b98d57988.html" style="font-size: 24px; " >Klik disini </a>
+                    <h3>More Information</h3>
+                    <a href="https://heyzine.com/flip-book/6b98d57988.html" style="font-size: 24px; " >Flip Book </a>
                     <p>08123456789</p>
                 </div>
                 <div class="footer-section">
