--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#courses">What is Bakso Malang?</a></li>
-                    <li><a href="#tutors">tools and materials</a></li>
+                    <li><a href="#tutors">pppppp and materials</a></li>
                     <li><a href="#partners">How To Make Bakso Malang</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="" class="tbl-biru">Sign Up</a></li>
