--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uprak hybird.</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .centerImage{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        } 
+        </style>
 </head>
 <body>
     <nav>
