--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>I Love Bakso So Much!!!</p>
                 <p><a href="" class="tbl-biru">Show me more</a></p>
             </div>
-            <img src="https://github.com/Chandraa55/so-bakso/blob/main/Stiker%20UPRAK%20PKWU.png?raw=true" width="300px"/>
+            <img src="https://github.com/Chandraa55/so-bakso/blob/main/Stiker%20UPRAK%20PKWU.png?raw=true"  class="centerImage" width="300px"/>
         </section>
 
         <!-- untuk tutors -->
@@ -81,9 +81,9 @@ f. Pan</p>
 
                 <div class="tutor-list">
                     <div class="kartu-tutor">
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32.jpeg?raw=true" width="300px"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32.jpeg?raw=true"  class="centerImage" width="300px"/>
                         <p>Our Group.</p>
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2014.06.32.jpeg?raw=true" width="400px"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2014.06.32.jpeg?raw=true"  class="centerImage" width="400px"/>
                     </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@ f. Pan</p>
 
                 <div class="partner-list">
                     <div class="kartu-partner">
-                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true" width="300px"/>
+                        <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.32%20(1).jpeg?raw=true"  class="centerImage" width="300px"/>
                 
                     </div>
                 </div>
@@ -121,7 +121,7 @@ f. Pan</p>
             <div class="footer">
                 <div class="footer-section">
                     <h3>How To Make Soup.</h3>
-                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true" width="400px"/>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33.jpeg?raw=true"  class="centerImage" width="400px"/>
                     <p>How to make meatball soup:
 1. Puree fried shallots, fried garlic, and pepper using a mortar
 2. Prepare water in a pan, then cook until boiling
@@ -133,7 +133,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Method Serve</h3>
-                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true" witdh="350px"/>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true"  class="centerImage" witdh="350px"/>
                 </div>
                 <div class="footer-section">
                     <h3>More Information</h3>
