--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ f. Pan</p>
                 </div>
                 <div class="footer-section">
                     <h3>Method Serve</h3>
-                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true"  class="centerImage" witdh="350px"/>
+                    <img src="https://github.com/Chandraa55/so-bakso/blob/main/WhatsApp%20Image%202025-02-14%20at%2013.52.33%20(1).jpeg?raw=true"  class="centerImage" width="350px"/>
                 </div>
                 <div class="footer-section">
                     <h3>More Information</h3>
