--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin-left: auto;
             margin-right: auto;
         } 
+        background-image: url('malang.jpeg');
         </style>
 </head>
 <body>
